latest stable version

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#00000" />
     <meta
       name="description"
-      content="AC:NH Inventory Generator"
+      content="AC:NH OrderBot Helper"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
